--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,12 @@ services:
       - MYSQL_DATABASE=hhplus
     volumes:
       - ./data/mysql/:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "application", "-papplication"]
+      timeout: 20s
+      retries: 10
+      interval: 10s
+      start_period: 30s
 
 networks:
   default:
