REFACTOR : Docker-Compose 초기 실행시 셋팅 변경 및 Spring Boot 초기 셋팅 변경

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
   mysql:
+    container_name: e-commerce-mysql
     image: mysql:8.0
     ports:
       - "3306:3306"
@@ -11,6 +12,7 @@ services:
       - MYSQL_DATABASE=hhplus
     volumes:
       - ./data/mysql/:/var/lib/mysql
+      - /d/25년/7월/e-commerce/init-scripts:/docker-entrypoint-initdb.d
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "application", "-papplication"]
       timeout: 20s
