--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,14 @@ services:
       retries: 10
       interval: 10s
       start_period: 30s
+      
+  redis:
+    image: redis:7.2
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./data/redis/:/data
+    command: redis-server --appendonly yes
 
 networks:
   default:
