--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,36 @@ services:
       - ./data/redis/:/data
     command: redis-server --appendonly yes
 
+  kafka:
+    image: public.ecr.aws/bitnami/kafka:3.5.1
+    ports:
+      - "9094:9094"
+    volumes:
+      - kafka-data1:/bitnami/kafka
+    environment:
+      KAFKA_CFG_NODE_ID: 0
+      KAFKA_CFG_PROCESS_ROLES: controller,broker
+      KAFKA_CFG_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
+      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
+      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: 0@127.0.0.1:9093
+      KAFKA_CFG_CONTROLLER_LISTENER_NAMES: CONTROLLER
+
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    container_name: kafka-ui
+    environment:
+      - KAFKA_CLUSTERS_0_BOOTSTRAP_SERVERS=kafka:9092
+      - KAFKA_CLUSTERS_0_NAME=local-kafka
+    ports:
+      - "8081:8080"
+    depends_on:
+      - kafka
+    restart: always
+
+volumes:
+  kafka-data1:
+
 networks:
   default:
     driver: bridge
