--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,20 @@
 version: '3'
 services:
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    environment:
+      - SPRING_PROFILES_ACTIVE=dev
+      - TZ="Asia/Seoul"
+    deploy:
+      resources:
+        limits:
+          cpus: '2.0'
+          memory: 4G
+
   mysql:
     container_name: e-commerce-mysql
     image: mysql:8.0
@@ -44,7 +59,6 @@ services:
 
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
-    container_name: kafka-ui
     environment:
       - KAFKA_CLUSTERS_0_BOOTSTRAP_SERVERS=kafka:9092
       - KAFKA_CLUSTERS_0_NAME=local-kafka
@@ -52,8 +66,14 @@ services:
       - "8081:8080"
     depends_on:
       - kafka
-    restart: always
 
+  prometheus:
+    image: prom/prometheus:latest
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      
 volumes:
   kafka-data1:
 
