--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,9 +20,20 @@ spring:
     properties:
       hibernate.timezone.default_storage: NORMALIZE_UTC
       hibernate.jdbc.time_zone: UTC
+management:
+  endpoint:
+    health:
+      show-details: always
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  metrics:
+    enable:
+      all: true
 
 ---
-spring.config.activate.on-profile: local, test
+spring.config.activate.on-profile: dev, local, test
 
 spring:
   datasource:
@@ -30,7 +41,7 @@ spring:
     username: application
     password: application
   jpa:
-    show-sql: true
+    show-sql: false
     hibernate:
       ddl-auto: create-drop
     properties:
@@ -66,6 +77,20 @@ spring:
       enable-auto-commit: false
     listener:
       ack-mode: manual
+
+---
+spring.config.activate.on-profile: dev
+
+spring:
+  datasource:
+    url: jdbc:mysql://mysql:3306/hhplus?characterEncoding=UTF-8&serverTimezone=UTC
+
+  data:
+    redis:
+      host: redis
+
+  kafka:
+    bootstrap-servers: kafka:9092
 ---
 spring.config.activate.on-profile: test
 
